# NIezapominajka-gui

./: .gitignore  MANIFEST.in  pyproject.toml
src/Niezapominajka_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/niezapominajka_gui/: __main__.py  deck_review.py  home_screen.py  main_window.py
