[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "niezapominajka-gui"
version = "0.0.1"
description = "Simple flashcard app"

requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "niezapominajka>=0.0.2",
    "PySide6"
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
niezapominajka-gui = "niezapominajka_gui.__main__:main"
